syntax = "proto3";

package auth;

option go_package = "authpb";

service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string access_token = 1;
  string refresh_token = 2;
  string expires_in = 3;
}

message VerifyTokenRequest {
  string access_token = 1;
}

message VerifyTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string username = 3;
}
